last commit all things are done 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,6 @@
     <string name="restoran_gmail">restoran@gmail.com</string>
     <string name="rest_no">+92 320 2290183</string>
     <string name="icon">icon</string>
-    <string name="book_a_table_online_n">Book a table online\n</string>
+    <string name="book_a_table_online_n">Book a table online</string>
     <string name="chefn1">Javier Joseph</string>
 </resources>
